--- a/mcp-spring/mcp-spring-webmvc/pom.xml
+++ b/mcp-spring/mcp-spring-webmvc/pom.xml
@@ -13,12 +13,12 @@
 	<packaging>jar</packaging>
 	<name>Spring Web MVC implementation of the Java MCP SSE transport</name>
 	<description></description>
-	<url>https://github.com/modelcontextprotocol/java-sdk</url>
+	<url>https://github.com/HubSpot/java-sdk</url>
 
 	<scm>
-		<url>https://github.com/modelcontextprotocol/java-sdk</url>
-		<connection>git://github.com/modelcontextprotocol/java-sdk.git</connection>
-		<developerConnection>git@github.com/modelcontextprotocol/java-sdk.git</developerConnection>
+		<url>https://github.com/HubSpot/java-sdk</url>
+		<connection>git://github.com/HubSpot/java-sdk.git</connection>
+		<developerConnection>git@github.com/HubSpot/java-sdk.git</developerConnection>
 	</scm>
 
 	<dependencies>
