--- a/mcp-test/pom.xml
+++ b/mcp-test/pom.xml
@@ -12,12 +12,12 @@
 	<packaging>jar</packaging>
 	<name>Tests for the Java MCP SDK</name>
 	<description>Provides some shared test fasilities for the MCP Java SDK</description>
-	<url>https://github.com/modelcontextprotocol/java-sdk</url>
+	<url>https://github.com/HubSpot/java-sdk</url>
 
 	<scm>
-		<url>https://github.com/modelcontextprotocol/java-sdk</url>
-		<connection>git://github.com/modelcontextprotocol/java-sdk.git</connection>
-		<developerConnection>git@github.com/modelcontextprotocol/java-sdk.git</developerConnection>
+		<url>https://github.com/HubSpot/java-sdk</url>
+		<connection>git://github.com/HubSpot/java-sdk.git</connection>
+		<developerConnection>git@github.com/HubSpot/java-sdk.git</developerConnection>
 	</scm>
 
 	<dependencies>
