--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
 	<version>0.11.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	<url>https://github.com/modelcontextprotocol/java-sdk</url>
+	<url>https://github.com/HubSpot/java-sdk</url>
 
 	<scm>
-		<url>https://github.com/modelcontextprotocol/java-sdk</url>
-		<connection>git://github.com/modelcontextprotocol/java-sdk.git</connection>
-		<developerConnection>git@github.com/modelcontextprotocol/java-sdk.git</developerConnection>
+		<url>https://github.com/HubSpot/java-sdk</url>
+		<connection>git://github.com/HubSpot/java-sdk.git</connection>
+		<developerConnection>git@github.com/HubSpot/java-sdk.git</developerConnection>
 	</scm>
 
 	<name>Java SDK MCP Parent</name>
@@ -22,8 +22,8 @@
 
 
 	<organization>
-		<name>Anthropic</name>
-		<url>https://www.anthropic.com</url>
+		<name>HubSpot</name>
+		<url>https://www.hubspot.com</url>
 	</organization>
 
 	<licenses>
@@ -35,20 +35,17 @@
 
 	<developers>
 		<developer>
-			<name>Christian Tzolov</name>
-		</developer>
-		<developer>
-			<name>Dariusz Jędrzejczyk</name>
+			<name>William Hou</name>
 		</developer>
 	</developers>
 
 	<issueManagement>
 		<system>Github Issues</system>
-		<url>https://github.com/modelcontextprotocol/java-sdk/issues</url>
+		<url>https://github.com/HubSpot/java-sdk/issues</url>
 	</issueManagement>
 	<ciManagement>
 		<system>Github Actions</system>
-		<url>https://github.com/modelcontextprotocol/java-sdk/actions</url>
+		<url>https://github.com/HubSpot/java-sdk/actions</url>
 	</ciManagement>
 
 	<properties>
