--- a/mcp/pom.xml
+++ b/mcp/pom.xml
@@ -12,12 +12,12 @@
 	<packaging>jar</packaging>
 	<name>Java MCP SDK</name>
 	<description>Java SDK implementation of the Model Context Protocol, enabling seamless integration with language models and AI tools</description>
-	<url>https://github.com/modelcontextprotocol/java-sdk</url>
+	<url>https://github.com/hubspot/java-sdk</url>
 
 	<scm>
-		<url>https://github.com/modelcontextprotocol/java-sdk</url>
-		<connection>git://github.com/modelcontextprotocol/java-sdk.git</connection>
-		<developerConnection>git@github.com/modelcontextprotocol/java-sdk.git</developerConnection>
+		<url>https://github.com/hubspot/java-sdk</url>
+		<connection>git://github.com/hubspot/java-sdk.git</connection>
+		<developerConnection>git@github.com/hubspot/java-sdk.git</developerConnection>
 	</scm>
 
 	<properties>
