--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
 	<version>0.11.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	<url>https://github.com/modelcontextprotocol/java-sdk</url>
+	<url>https://github.com/hubspot/java-sdk</url>
 
 	<scm>
-		<url>https://github.com/modelcontextprotocol/java-sdk</url>
-		<connection>git://github.com/modelcontextprotocol/java-sdk.git</connection>
-		<developerConnection>git@github.com/modelcontextprotocol/java-sdk.git</developerConnection>
+		<url>https://github.com/hubspot/java-sdk</url>
+		<connection>git://github.com/hubspot/java-sdk.git</connection>
+		<developerConnection>git@github.com/hubspot/java-sdk.git</developerConnection>
 	</scm>
 
 	<name>Java SDK MCP Parent</name>
@@ -28,8 +28,8 @@
 
 
 	<organization>
-		<name>Anthropic</name>
-		<url>https://www.anthropic.com</url>
+		<name>HubSpot</name>
+		<url>https://www.hubspot.com</url>
 	</organization>
 
 	<licenses>
@@ -41,10 +41,7 @@
 
 	<developers>
 		<developer>
-			<name>Christian Tzolov</name>
-		</developer>
-		<developer>
-			<name>Dariusz Jędrzejczyk</name>
+			<name>William Hou</name>
 		</developer>
 	</developers>
 
