--- a/mcp-spring/mcp-spring-webflux/pom.xml
+++ b/mcp-spring/mcp-spring-webflux/pom.xml
@@ -21,6 +21,10 @@
 		<developerConnection>git@github.com/HubSpot/java-sdk.git</developerConnection>
 	</scm>
 
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>io.modelcontextprotocol.sdk</groupId>
@@ -44,6 +48,7 @@
 		<dependency>
 			<groupId>io.projectreactor.netty</groupId>
 			<artifactId>reactor-netty-http</artifactId>
+			<version>${reactor.netty.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -91,6 +96,7 @@
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
+			<version>${reactor.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
