--- a/mcp-test/pom.xml
+++ b/mcp-test/pom.xml
@@ -42,6 +42,7 @@
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
+			<version>${reactor.version}</version>
 		</dependency>
 
 		<dependency>
@@ -67,6 +68,7 @@
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
+			<version>${reactor.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
