--- a/pom.xml
+++ b/pom.xml
@@ -110,11 +110,11 @@
 	</properties>
 
 	<modules>
-		<!--		<module>mcp-bom</module>-->
+		<module>mcp-bom</module>
 		<module>mcp</module>
-		<!--		<module>mcp-spring/mcp-spring-webflux</module>-->
-		<!--		<module>mcp-spring/mcp-spring-webmvc</module>-->
-		<!--		<module>mcp-test</module>-->
+		<module>mcp-spring/mcp-spring-webflux</module>
+		<module>mcp-spring/mcp-spring-webmvc</module>
+		<module>mcp-test</module>
 	</modules>
 
 	<!--	<build>-->
