--- a/mcp/pom.xml
+++ b/mcp/pom.xml
@@ -20,67 +20,72 @@
 		<developerConnection>git@github.com/modelcontextprotocol/java-sdk.git</developerConnection>
 	</scm>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>biz.aQute.bnd</groupId>
-				<artifactId>bnd-maven-plugin</artifactId>
-				<version>${bnd-maven-plugin.version}</version>
-				<executions>
-					<execution>
-						<id>bnd-process</id>
-						<goals>
-							<goal>bnd-process</goal>
-						</goals>
-						<configuration>
-							<bnd><![CDATA[
-								Bundle-Name:            Bundle ${project.groupId} : ${project.artifactId}
-								version:                ${versionmask;===;${version_cleanup;${project.version}}}
-								Bundle-SymbolicName:    ${project.groupId}.${project.artifactId}
-								Bundle-Version:         ${version}
-								Automatic-Module-Name:  ${project.groupId}.${project.artifactId}
-								Import-Package:         jakarta.*;resolution:=optional, \
-								                        *;
-								Export-Package:         io.modelcontextprotocol.*;version="${version}";-noimport:=true
-								-noimportjava:          true;
-								-nouses:                true;
-								-removeheaders:         Private-Package
-								]]>
-							</bnd>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+	</properties>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+<!--	<build>-->
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<groupId>biz.aQute.bnd</groupId>-->
+<!--				<artifactId>bnd-maven-plugin</artifactId>-->
+<!--				<version>${bnd-maven-plugin.version}</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>bnd-process</id>-->
+<!--						<goals>-->
+<!--							<goal>bnd-process</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<bnd><![CDATA[-->
+<!--								Bundle-Name:            Bundle ${project.groupId} : ${project.artifactId}-->
+<!--								version:                ${versionmask;===;${version_cleanup;${project.version}}}-->
+<!--								Bundle-SymbolicName:    ${project.groupId}.${project.artifactId}-->
+<!--								Bundle-Version:         ${version}-->
+<!--								Automatic-Module-Name:  ${project.groupId}.${project.artifactId}-->
+<!--								Import-Package:         jakarta.*;resolution:=optional, \-->
+<!--								                        *;-->
+<!--								Export-Package:         io.modelcontextprotocol.*;version="${version}";-noimport:=true-->
+<!--								-noimportjava:          true;-->
+<!--								-nouses:                true;-->
+<!--								-removeheaders:         Private-Package-->
+<!--								]]>-->
+<!--							</bnd>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
+
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-jar-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<archive>-->
+<!--						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>-->
+<!--					</archive>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</build>-->
 
 	<dependencies>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j-api.version}</version>
+<!--			<version>${slf4j-api.version}</version>-->
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+<!--			<version>${jackson.version}</version>-->
 		</dependency>
 
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-core</artifactId>
+			<version>${reactor.version}</version>
 		</dependency>
 
 		<dependency>
@@ -110,6 +115,7 @@
 		<dependency>
 			<groupId>io.projectreactor.netty</groupId>
 			<artifactId>reactor-netty-http</artifactId>
+			<version>${reactor.netty.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -165,6 +171,7 @@
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
+			<version>${reactor.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
